# whisper_input

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
scripts/: generate_macos_icons.swift  install_macos_app.sh
src/: app.rs  audio.rs  config.rs  hotkey.rs  hotkey_dialog.rs  main.rs  model.rs  paste.rs  settings_window.rs  sound.rs  startup.rs  tool.rs  transcribe.rs
tests/: cli_help.rs  install_script.rs
