[package]
name = "whisper_input"
version = "0.1.0"
edition = "2024"
description = "Local Whisper voice input utility for macOS terminal apps"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
cpal = "0.17.3"
dirs = "6.0.0"
enigo = "0.6.1"
handy-keys = "0.2.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
tao = "0.34.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tray-icon = { version = "0.21.3", default-features = false }
whisper-rs = { version = "0.15.1", features = ["metal"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
core-foundation-sys = "0.8.7"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSBox", "NSButton", "NSControl", "NSPopUpButton", "NSResponder", "NSText", "NSTextField", "NSView"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSGeometry", "NSObject", "NSString"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
